# api-spec/v1/openapi.yaml
@@ -25,7 +25,7 @@ paths:
       description: 'GET login endpoint with reCAPTCHA code'
       parameters:
         - in: header
-          name: x-rptid
+          name: x-rpt-id
           required: false
           description: Optional RPTID for tracking login attempts
           schema:
@@ -62,6 +62,13 @@ paths:
       operationId: authUsers
       summary: Get user information
       description: 'GET user information'
+      parameters:
+        - in: header
+          name: x-rpt-id
+          required: false
+          description: Optional RPTID
+          schema:
+            type: string
       security:
         - bearerAuth: []
       responses:
@@ -102,6 +109,13 @@ paths:
       operationId: authLogout
       summary: Logout endpoint
       description: 'POST logout endpoint'
+      parameters:
+        - in: header
+          name: x-rpt-id
+          required: false
+          description: Optional RPTID
+          schema:
+            type: string
       security:
         - bearerAuth: []
       responses:
@@ -132,6 +146,13 @@ paths:
       operationId: authenticateWithAuthToken
       summary: Authentication endpoint
       description: 'POST authentication endpoint with auth code'
+      parameters:
+        - in: header
+          name: x-rpt-id
+          required: false
+          description: Optional RPTID
+          schema:
+            type: string
       requestBody:
         $ref: '#/components/requestBodies/AuthRequest'
       responses:
@@ -178,6 +199,13 @@ paths:
       operationId: validateToken
       summary: Validate a token
       description: 'GET endpoint to validate a token'
+      parameters:
+        - in: header
+          name: x-rpt-id
+          required: false
+          description: Optional RPTID for tracking login attempts
+          schema:
+            type: string
       security:
         - bearerAuth: []
       responses:
